[tool.poetry]
name = "hex-backend"
version = "0.1.0"
description = ""
authors = ["Arthur <pro.arthurfavereaux@gmail.com>"]
readme = "README.md"
packages = [{include = "hex_backend"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
